# ethereum-mcp-server

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
benches/: ethereum_operations.rs
docs/: API_REFERENCE.md  CALL_GRAPH_DIAGRAM_GUIDE.md  DOCKER_DEPLOYMENT.md  LITERATE_CODE_MAPS_README.md  REQUIREMENTS.md  SECURITY_AUDIT_REPORT.md  SYSTEM_DESIGN.md  WEBSOCKET_IMPLEMENTATION.md
docs/diagrams/architecture/: balance_query_flow.puml  error_handling_flow.puml  ethereum_mcp_architecture.puml  http_request_processing_flow.puml  swap_simulation_flow.puml
docs/diagrams/call-graphs/: balance_query_call_graph.puml  price_service_call_graph.puml  swap_simulation_call_graph.puml  system_initialization_call_graph.puml  transaction_status_call_graph.puml
scripts/: load_test.sh
src/: contracts.rs  lib.rs  main.rs  validation.rs
src/providers/: circuit_breaker.rs  ethereum.rs  mock.rs  mod.rs  nonce_manager.rs
src/server/: http.rs  jsonrpc.rs  mod.rs
src/services/: balance.rs  mod.rs  price.rs  swap.rs  transaction_status.rs
src/types/: mod.rs
tests/: integration_tests.rs
tests/fixtures/: test_data.rs
tests/integration/: common.rs
